...

    var message: Text? {
        Text("Create a beautiful share card to show friends the real cost of your stuff.")
    }

    var image: Image? {
        Image(systemName: "square.and.arrow.up")
    }

    @Parameter
    static var viewCount: Int = 0

    var rules: [Rule] {
...
